<resources>
    <string name="app_name">Schedule My Diet</string>
    <string name="titleApp">Schedule My Diet</string>

    <string name="signIn"><b>Login</b></string>
    <string name="noAccount">Don\'t have an account? <b><font color="@android:color/holo_red_light">SIGNUP</font></b></string>
    <string name="signup">Signup</string>
    <string name="hello"><b>Hello</b> World, fh!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="isServiceProvider">Is Service Provider</string>
    <string name="submit">Submit</string>
    <string name="editprofile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="loading">Loading</string>
    <string name="myCars">My Cars</string>
    <string name="title_activity_navigation_main">NavigationMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>


</resources>