<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="318dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:text="@string/forgetPassword"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/idSubmitbutton"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/common_primary_button"
        android:text="@string/submit"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/appicon" />

    <EditText
        android:id="@+id/idEditTextNewPassword"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"


        android:paddingRight="5dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditTextEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/idEditTextConfirmpassword"
        android:layout_width="345dp"
        android:layout_height="42dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="left"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idEditTextNewPassword"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/idEditTextEmail"
        android:layout_width="345dp"
        android:layout_height="42dp"


        android:layout_marginStart="5dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:gravity="center_horizontal|left"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck"
        tools:textColor="@color/black" />
</androidx.constraintlayout.widget.ConstraintLayout>